--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,17 @@
 {
 	"name": "nailsapp/module-barcode",
-	"keywords": ["Nails","Shed Collective","CodeIgniter", "Barcode Module"],
+	"keywords":
+	[
+		"Nails",
+		"Shed Collective",
+		"CodeIgniter",
+		"Barcode Module"
+	],
 	"homepage": "http://nailsapp.co.uk/modules/barcode",
 	"description": "This the \"Barcode\" module for Nails.",
-	"license":"MIT",
-	"authors": [
+	"license": "MIT",
+	"authors":
+	[
 		{
 			"name": "Pablo de la Pena",
 			"email": "p@shedcollective.org",
@@ -18,11 +25,11 @@
 			"role": "Developer"
 		}
 	],
-	"support": {
+	"support":
+	{
 		"email": "hello@shedcollective.org"
 	},
 	"require":
 	{
-		"php": ">=5.4.0"
 	}
 }
