Defining module's namespace in `composer.json`

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "nails" :
         {
             "moduleName": "barcode",
-            "type": "module"
+            "type": "module",
+            "namespace": "Nails\\Barcode\\"
         }
     }
 }
