--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,13 @@
     {
         "nails/common": "dev-develop"
     },
-    "require-dev":
-    {
-        "phpunit/phpunit": "9.*"
+    "require-dev": {
+        "phpunit/phpunit": "9.*",
+        "phpstan/phpstan": "0.*"
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit",
+        "analyse": "./vendor/bin/phpstan analyse -c .phpstan/config.neon"
     },
     "autoload":
     {
